--- a/src/components/layout/Navbar/Navbar.css
+++ b/src/components/layout/Navbar/Navbar.css
@@ -431,9 +431,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: var(--bg-app);
-    z-index: 2000;
+    z-index: 9999;
     display: flex;
     flex-direction: column;
     color: var(--text-main);
